syntax = "proto3";

option go_package = "/filecomponentsservice/pb";

import "google/protobuf/empty.proto";

message FileComponent {
    int32 id = 1;
    string repository_id = 2;
    string file_path = 3;
    int32 start_line = 4;
    int32 end_line = 5;
    string content = 6;
}

message FileComponents {
    repeated FileComponent file_components = 1;
}

message FileComponentIds {
    repeated int32 file_component_ids = 1;
}

message RepositoryFilePaths {
    string repository_id = 1;
    repeated string file_paths = 2;
}

message DeleteFileComponentsByRepositoryIdRequest {
    string repository_id = 1;
}

message DeleteFileComponentsByRepositoryIdAndFilePathsRequest {
    string repository_id = 1;
    repeated string file_paths = 2;
}

message DeleteFileComponentsByRepositoryIdAndFilePathsResponse {
    repeated int32 file_component_ids = 1;
}

service FileComponentsService {
    rpc CreateFileComponents(RepositoryFilePaths) returns(FileComponents);
    rpc GetFileComponents(FileComponentIds) returns (FileComponents);
    rpc DeleteFileComponentsByRepositoryId(DeleteFileComponentsByRepositoryIdRequest) returns (google.protobuf.Empty);
    rpc DeleteFileComponentsByRepositoryIdAndFilePaths(DeleteFileComponentsByRepositoryIdAndFilePathsRequest) returns (DeleteFileComponentsByRepositoryIdAndFilePathsResponse);
}